--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
     <link rel="stylesheet" href="css/styles.css" />
     
 
-    <title>Luis Gonçalves | Webpage</title>
+    <title>Opium | Webpage</title>
   </head>
 
 
-  <body>
-    <div class="container-flex  mainContainer">
+  <body id="particles-js">
+    <div class="container-flex  mainContainer" >
     <!-- logo container start -->
     <div id="logoContainer" class="container flex">
         <img
@@ -62,7 +62,8 @@
         <div class="container-flex"><small>Copyright &copy; Opium | Webpage 2022</small></div>
     </div>
 
-        <!-- Core theme JS-->
-      <script src="js/scripts.js"  type="text/javascript"></script>
+        <!-- Particles -->
+        <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+        <script type="text/javascript" src="js/scripts.js"></script>
   </body>
 </html>
