fix:social media links

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
           <div id="socialM" class="text-center" >
         <p id="p1">Let's get in touch!</p>
          <div id="mediaIcons" class="text-center" >
-          <a href="mailto:zitoluis99@icloud.com" id="icons" class="bi bi-facebook " target="_blank"></a>
-          <a href="https://www.linkedin.com/in/luis-gon%C3%A7alves-a81401232" id="icons" target="_blank" class="bi bi-instagram"></a>
+          <a href="https://www.facebook.com/opium.braganca" id="icons" class="bi bi-facebook " target="_blank"></a>
+          <a href="https://www.instagram.com/opium.braganca/?hl=en" id="icons" target="_blank" class="bi bi-instagram"></a>
         </div>
 </div>
         <div class="container-flex"><small>Copyright &copy; Opium | Webpage 2022</small></div>
