chore: link buttons to pdf

--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
       src="https://kit.fontawesome.com/43e50f316d.js"
       crossorigin="anonymous"
     ></script>
-    
-    <script src="js/scripts.js"></script> 
-    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="css/styles.css" />
     
 
@@ -37,15 +34,15 @@
     <div id="logoContainer" class="container flex">
         <img
             id="imgLogo"
-            src="/assets/logo.png"
+            src="/assets/img/logo.png"
             alt="my profilepic"
           />
       </div>
       <!-- logo container end -->
       <!-- button container start -->
       <div id="buttonContainer" class="d-grid gap-3">
-        <button id="button" class="btn" type="button">Bar</button>
-        <button id="button" class="btn" type="button">Hookah</button>
+        <button id="button" onclick="window.location.href='/assets/pdf/pdf_ex.pdf'" class="btn" type="button">Bar</button>
+        <button id="button" onclick="window.location.href='/assets/pdf/pdf_ex.pdf'" class="btn" type="button">Hookah</button>
       </div>
       <!-- button container end -->
       <!-- social media conteiner start -->
@@ -53,7 +50,7 @@
       <!-- social media conteiner end -->
       <footer class="footer text-center text-white copyright">
           <div id="socialM" class="text-center" >
-        <p id="p1">Let's get in touch!</p>
+        <p id="p1">Get to know us!</p>
          <div id="mediaIcons" class="text-center" >
           <a href="https://www.facebook.com/opium.braganca" id="icons" class="bi bi-facebook " target="_blank"></a>
           <a href="https://www.instagram.com/opium.braganca/?hl=en" id="icons" target="_blank" class="bi bi-instagram"></a>
