fix:botton color

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body id="particles-js">
     <div class="container-flex  mainContainer" >
     <!-- logo container start -->
-    <div id="logoContainer" class="container flex">
+    <div id="logoContainer" class="container flex text-center">
         <img
             id="imgLogo"
             src="/assets/img/logo.png"
