--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       <!-- logo container end -->
       <!-- button container start -->
       <div id="buttonContainer" class="d-grid gap-3">
-        <button id="button" onclick="window.location.href='/assets/pdf/pdf_ex.pdf'" class="btn" type="button">Bar</button>
-        <button id="button" onclick="window.location.href='/assets/pdf/pdf_ex.pdf'" class="btn" type="button">Hookah</button>
+        <button id="button" onclick="window.location.href='/assets/pdf/pdf_ex.pdf'" class="btn" type="button">BAR</button>
+        <button id="button" onclick="window.location.href='/assets/pdf/pdf_ex.pdf'" class="btn" type="button">HOOKAH</button>
       </div>
       <!-- button container end -->
       <!-- social media conteiner start -->
