--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
     <div id="logoContainer" class="container flex text-center">
         <img
             id="imgLogo"
-            src="/assets/img/logo.png"
+            src="/opim_website_pdf/assets/img/logo.png"
             alt="my profilepic"
           />
       </div>
       <!-- logo container end -->
       <!-- button container start -->
       <div id="buttonContainer" class="d-grid gap-3">
-        <button id="button" onclick="window.location.href='/assets/pdf/pdf_ex.pdf'" class="btn" type="button">BAR</button>
-        <button id="button" onclick="window.location.href='/assets/pdf/pdf_ex.pdf'" class="btn" type="button">HOOKAH</button>
+        <button id="button" onclick="window.location.href='/opim_website_pdf/assets/pdf/pdf_ex.pdf'" class="btn" type="button">BAR</button>
+        <button id="button" onclick="window.location.href='/opim_website_pdf/assets/pdf/pdf_ex.pdf'" class="btn" type="button">HOOKAH</button>
       </div>
       <!-- button container end -->
       <!-- social media conteiner start -->
