--- a/pdf.html
+++ b/pdf.html
@@ -24,7 +24,7 @@
 
     <div class="container-flex  mainContainer">
         <iframe src="/assets/pdf/pdf_ex.pdf" 
-        style="width:100%; height:100%;" frameborder="0"></iframe>
+        style="width:100vw; height:100%;" frameborder="0"></iframe>
 
     </div>
   </body>
