--- a/pdf.html
+++ b/pdf.html
@@ -22,7 +22,7 @@
 
   <body>
 
-    <div class="container-flex  mainContainer">
+    <div class="mainContainer">
         <iframe src="/assets/pdf/pdf_ex.pdf" 
         style="width:100vw; height:100%;" frameborder="0"></iframe>
 
